ec2vpc.yaml

AWSTemplateFormatVersion: 2010-09-09
Description:  This template deploys a VPC in either us-east1 or us-west-2


Parameters:
  DBPassword:
    Type: String
    Description: Db password must alphanumeric

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName

  ImageId:
    Type: String
    Default: ami-00569e54da628d17c
    
  MyAvailabilityZone:
    Description: Select the AZ
    Type: String
    Default: us-west-1a

Resources:

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: Test-Vpc

  RdsDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet for rdsdb
      SubnetIds:
      - Ref: PrivateSubnet1
      - Ref: PrivateSubnet2
      Tags:
      - Key: Name
        Value: Rds-DBSubnetGroup


  RdsDBInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: '5'
      DBInstanceIdentifier: MyRdsDemo
      DBName: TestRds
      DBSecurityGroups:
        -Ref: DBSecurityGroup
     # - !GetAtt RdsSecurityGroup.GroupId
      DBSubnetGroupName:
        Ref: RdsDBSubnetGroup
      DBInstanceClass: db.t2.small
      Engine: MYSQL
      EngineVersion: 8.0.28
      MasterUsername: masterrds
      MasterUserPassword:
        Ref: DBPassword


      Tags:
      - Key: Name
        Value: MYRDSDEMO

  DBSecurityGroup:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      DBSecurityGroupIngress:
        #CidrIp: 0.0.0.0/0
       # DbSecurityGroupName:
        #  Ref: RdsSecurityGroup
        EC2SecurityGroupId: 
          - !GetAtt "RdsSecurityGroup.GroupId"
       # EC2SecurityGroupownerId:
        EC2SecurityGroupName:
            Ref: WebServerSecurityGroup
      GroupDescription: Frontend Access

  RdsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow Rds connection
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: '3306'
        ToPort: '3306'
       # SourceSecurityGroupId: !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: Rds-Sg

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: Test-Igw

  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs '' ]
      CidrBlock: 10.0.1.0/24
      
      Tags:
        - Key: Name
          Value: Public-Subnet-Test


  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [ 0, !GetAZs  '' ]
      CidrBlock: 10.0.2.0/24
      Tags:
        - Key: Name
          Value: Private-Subnet-Test1


  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select [ 1, !GetAZs '' ]
      VpcId:
        Ref: VPC
      CidrBlock: 10.0.3.0/24
      Tags:
      - Key: Name
        Value: Private-Subnet-Test2

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: Public-RT

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet
      
  WebServerSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable HTTP from 0.0.0.0/0
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
        
      VpcId: !Ref VPC 
      
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref ImageId
      KeyName: !Ref KeyName
      AvailabilityZone: !Ref MyAvailabilityZone
      InstanceType: t2.micro
      SubnetId: !Ref PublicSubnet
      SecurityGroupIds: 
        - !Ref WebServerSecurityGroup
      Tags:
       - Key: Name
         Value: Test-Ec2
